# rusty-mailer

./: .env  Cargo.toml  Dockerfile  README.md  configuration.yml  spec.yml  sqlx-data.json
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: general.yml  scheduled-audit.yml
configuration/: base.yml
migrations/: 20220201145312_create_subscriptions_table.sql  20220316204955_add_status_column_to_subscriptions_table.sql  20220316212340_make_status_not_null_in_subscriptions.sql  20220316214049_create_subscription_tokens_table.sql  20220410220816_create_users_table.sql  20220411223633_rename_password_column_in_users_table.sql  20220413151502_add_salt_column_to_users_table.sql  20220415062412_remove_salt_column_from_users_table.sql  20220609234449_seed_user.sql  20220622123720_create_idempotency_table.sql  20220626032825_relax_null_checks_on_idempotency_table.sql  20220629014125_create_newsletter_issues_table.sql  20220629015335_create_issue_delivery_queue_table.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  mod.rs
src/domains/: mod.rs  subscriber_email.rs  subscriber_name.rs
src/domains/idempotency/: key.rs  persistence.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs  mod.rs
src/routes/admin/newsletters/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: health-check.rs  health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
