[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"
name = "zero2prod"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.0.0-beta.21"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = "1.0.136"
config = "0.11"
uuid = { version = "0.8.2", features = ["v4"] }
chrono = "0.4.19"
tracing = { version = "0.1.31", features = ["log"] }
tracing-bunyan-formatter = "0.3.2"
tracing-subscriber = { version = "0.3.9", features = ["registry", "env-filter"] }
tracing-log = "0.1.2"
serde-aux = "3.0.1"
once_cell = "1.9.0"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.5.0-rc.3"
unicode-segmentation = "1.9.0"
claim = "0.5.0"
validator = "0.14.0"
reqwest = { version = "0.11.9", default-features = false, features = ["json", "rustls-tls"] }

[dependencies.sqlx]
version = "0.5"
default-features = false
features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "offline"
]

[dev-dependencies]
fake = "~2.3"
quickcheck = "0.9"
quickcheck_macros = "0.9"
wiremock = "0.5.11"
serde_json = "1.0.79"